Added clicker game

--- a/week_5.1/css/main.sass
+++ b/week_5.1/css/main.sass
@@ -100,3 +100,13 @@ body
             background-color: #CC3
             text-align: center
             box-shadow: 0 2px 2px rgba(0, 0, 0, 0.4)
+
+#clickerBtn
+    height: 200px
+    width: 200px
+    margin: 40px auto
+    background-color: #3C3
+    font-size: 2em
+    border: none
+    border-radius: 50%
+    transform-origin: center center
