--- a/week_5.1/css/main.css
+++ b/week_5.1/css/main.css
@@ -85,4 +85,14 @@ body {
       text-align: center;
       box-shadow: 0 2px 2px rgba(0, 0, 0, 0.4); }
 
+#clickerBtn {
+  height: 200px;
+  width: 200px;
+  margin: 40px auto;
+  background-color: #3C3;
+  font-size: 2em;
+  border: none;
+  border-radius: 50%;
+  transform-origin: center center; }
+
 /*# sourceMappingURL=main.css.map */
